EB-2002-11-15-0  Testsuite: Added two new tests which try to find
                            bug #402 and #423
                 IZ:        #425, #426

AA-2002-11-14-0  Kerberos:  changes to fix build problems with krb5

EB-2002-11-14-0  Bugfix:    - memopy leak in execd
                            - stepsize 0 in array job specification
                              results in qmaster exception
                            - job env variables SGE_TASK_* might be
                              overwritten by qsub -v
                 IZ:        423, 424, 402, 264
                 Bugtraq:   4778757, 4778758, 4778762
                 Review:    partially AH

EB-2002-11-12-0  Enhancem.: Allow qsub -b y to handle built-in commands
                 Issue:     #25 #26
                 Review:    AH

JG-2002-11-04-0  Enhancem.: Added utility functions for profiling.
                            Made scheduler use these profiling functions 
                            instead of former explicit implementation.
                            Made event mirror and spooling test client use 
                            profiling functions.

EB-2002-11-04-0  Enhancem.: Allow binary submission with qsub and
                            allow script submission with qrsh
                 Issue:     #25 #26
                 Review:    AH

JG-2002-10-31-2  Bugfix:    Event mirror interface: the event 
                            sgeE_JOB_MOD_SCHED_PRIORITY was not handled 
                            correctly.
                            Spooling framework (classic): Removing local 
                            configurations used incorrect path.

JG-2002-10-31-1  Bugfix:    shepherd dumped core when starting command with
                            unix behaviour (e.g. pe_start procedure).

JG-2002-10-31-0  Enhancem.  Documentation and some small enhancements for the 
                            spooling framework.